Fixed the special scrollbar

--- a/src/main/sass/sws/murcs/styles/materialDesign/global/scrollBar.sass
+++ b/src/main/sass/sws/murcs/styles/materialDesign/global/scrollBar.sass
@@ -1,16 +1,9 @@
 @import "../../globalStyles"
 
-.scroll-bar:horizontal, .scroll-bar:horizontal:focused,
 .scroll-bar:horizontal > .track-background
   -fx-background-color: transparent
   -fx-background-insets: 0.0
   -fx-padding: 0.0 0.0 2.0 0.0
-
-.scroll-bar:horizontal:hover, .scroll-bar:horizontal:focused:hover,
-.scroll-bar:horizontal:hover > .track-background
-  -fx-background-color: transparent
-  -fx-background-insets: 0.0
-  -fx-padding: 0.0 0.0 0.0 0.0
 
 .scroll-bar:vertical
   -fx-background-color: transparent
@@ -19,7 +12,6 @@
 
 .scroll-bar:vertical > .track-background,
 .scroll-bar:vertical:hover > .track-background,
-.scroll-bar:vertical:hover, .scroll-bar:vertical:focused:hover
   -fx-background-color: transparent
   -fx-background-insets: 0.0
   -fx-padding: -1.0 0.0 -1.0 0.0
@@ -29,54 +21,17 @@
   -fx-background-insets: 0.0
   -fx-background-radius: 4.0
 
-.scroll-bar:horizontal:hover > .thumb, .scroll-bar:vertical:hover > .thumb
-  -fx-background-color: rgba(0.0, 0.0, 0.0, 0.3)
-  -fx-background-radius: 6.0
-
-.scroll-bar:vertical:hover > .thumb
-  -fx-background-insets: 0.0 2.0 0.0 2.0
-
-.scroll-bar:horizontal:hover > .thumb
-  -fx-background-insets: 2.0 0.0 2.0 0.0
-
 .scroll-bar:horizontal > .track,
 .scroll-bar:vertical > .track
   -fx-background-color: transparent
   -fx-background-radius: 0.0
   -fx-background-insets: 0.0
 
-.scroll-bar:horizontal:hover > .track,
-.scroll-bar:vertical:hover > .track
-  -fx-border-color: rgb(198.0, 198.0, 198.0)
-
-.scroll-bar:vertical:hover > .track
-  -fx-background-color: linear-gradient(rgba(238.0, 238.0, 238.0, 0.7) 0.0%, rgba(255.0, 255.0, 255.0, 0.7) 100.0%)
-  -fx-border-width: 0.0 0.0 0.0 1.0
-  -fx-border-insets: 0.0 0.0 0.0 -1.0
-
-.scroll-bar:horizontal:hover > .track
-  -fx-background-color: linear-gradient(rgba(238.0, 238.0, 238.0, 0.8) 0.0%, rgba(255.0, 255.0, 255.0, 0.8) 100.0%)
-  -fx-border-width: 1.0 0.0 0.0 0.0
-  -fx-border-insets: -1.0 0.0 0.0 0.0
-
-
 .scroll-bar > .increment-button,
 .scroll-bar > .decrement-button
   -fx-background-color: transparent
   -fx-background-insets:  0.0
   -fx-padding: 0.0em
-
-.scroll-bar:vertical:hover > .increment-button,
-.scroll-bar:vertical:hover > .decrement-button
-  -fx-background-color: transparent
-  -fx-background-insets:  0.0
-  -fx-padding: 0.0em 6.0pt 0.0em 0.0em
-
-.scroll-bar:horizontal:hover > .increment-button,
-.scroll-bar:horizontal:hover > .decrement-button
-  -fx-background-color: transparent
-  -fx-background-insets:  0.0
-  -fx-padding: 6.0pt 0.0em 0.0em 0.0em
 
 .scroll-bar:horizontal > .increment-button > .increment-arrow,
 .scroll-bar:horizontal > .decrement-button > .decrement-arrow
